<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">container</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="welcomeword">欢迎使用智能货柜</string>
    <string name="passwordkai">1 密码开柜请按1</string>
    <string name="postcardkai">2 刷卡开柜请按2</string>
    <string name="barcardkai">2 条码开柜请按2</string>
    <string name="telnum">电话4008301230</string>

    <string name="lo1">广州市泰极信息科技有限公司</string>
    <string name="lo2">1</string>


    <string name="enter">确认</string>
    <string name="press4">”</string>
    <string name="press1">按“</string>
    <string name="cancel">取消</string>
    <string name="delete">”删除。</string>
    <string name="press2">返回。</string>
    <string name="press3">”继续，“</string>
    <string name="input">请输入11位手机号，并</string>
    <string name="input1">请输入6位密码，并</string>
    <string name="xx">********</string>

    <string name="open1">号抽屉已打开，请放入</string>
    <string name="open2">密码开柜</string>
    <string name="open3">第</string>
    <string name="open4">确定</string>
    <string name="open5">”继续，“</string>
    <string name="open9">”重新输入。</string>
    <string name="open6">您的物品并关上柜门，并</string>
    <string name="open7">号抽屉已打开，请</string>
    <string name="open8">取出你的物品并关上柜门，谢谢！</string>

    <string name="fail">（失败原因）</string>
    <string name="fail1">按“</string>
    <string name="press5">”重新输入，</string>
    <string name="fail2">”返回</string>

    <string name="swipe1">请将会员卡放置于“</string>
    <string name="swipe2">” 位</string>

    <string name="swipe3">置,当听到“</string>
    <string name="swipe4">” 的声音再将卡</string>
    <string name="swipe5">滴</string>
    <string name="swipe">刷卡</string>
    <string name="swipe6">片移开。</string>

    <string name="failreason1">”重新刷卡，</string>
    <string name="failreason2">” 返回。</string>
    <string name="failreason3">”重新刷条码，</string>

    <string name="zhineng">智能</string>
    <string name="huogui">货柜</string>

    <string name="bar1">请将条码放到条码区，当听到“</string>
    <string name="bar3">到“</string>
    <string name="bar2">”的声音将条码拿出</string>

    <string name="openout">请输入柜号开柜</string>
    <string name="openout1">XX</string>
    <string name="openout2">柜</string>
    <string name="ok">确定</string>
    <string name="smssending">正在发送到：</string>

    <string name="confirm">你输入的手机号为：</string>
    <string name="phonenumber">13877778888</string>
    <string name="thanks">谢谢使用!</string>
    <string name="description">TitleOfTheUI</string>
    <string name="taiji">TaiJi</string>


</resources>
