<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/white">

    <RelativeLayout
            android:id="@+id/horzi"
            android:layout_width="fill_parent"
            android:layout_height="60dip">

        <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/taiji"/>

        <View
                android:layout_height="fill_parent"
                android:background="@color/brown4"
                android:layout_toRightOf="@+id/iv_avatar"
                android:layout_width="1dp"
                android:id="@+id/line3"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp" />

        <View
                android:layout_height="fill_parent"
                android:background="@color/brown3"
                android:layout_width="1dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/line3"
                android:id="@+id/line4"
                android:layout_gravity="center_horizontal" />

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/line4"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:text="@string/lo1" />
    </RelativeLayout>

    <View
        android:layout_height="1dp"
        android:background="@color/brown2"
        android:layout_width="fill_parent"
        android:id="@+id/line1"
        android:layout_below="@+id/horzi"
        android:layout_marginTop="17dp" />

    <View
        android:layout_below="@+id/line1"
        android:layout_height="1dp"
        android:background="@color/brown1"
        android:layout_width="fill_parent"
        android:id="@+id/line2"

        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/line2"
        android:text="@string/open2"
        android:textColor="@color/blue3"
        android:textSize="38sp"
        android:textStyle="bold"
        android:id="@+id/ou" />

    <TextView
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/ou"
        android:text="@string/open3"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:id="@+id/in" />

    <TextView
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/in"
        android:layout_below="@+id/ou"
        android:text="@string/openout1"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:id="@+id/in1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/in1"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/ou"
        android:text="@string/open7"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:id="@+id/in2" />

    <TextView
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/ou"
        android:text="@string/open8"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:id="@+id/in4" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@drawable/bar3"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
