<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
     android:background="@color/white">
    
    <RelativeLayout 
     	android:id="@+id/horzi"       
	    android:layout_width="fill_parent" 
	    android:layout_height="60dip" >
	    <ImageView 
	        android:id="@+id/iv_avatar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/logo"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="20dp"/>	    
	          
	     <View              
               android:layout_height="fill_parent" 
               android:background="@color/brown4" 
               android:layout_toRightOf="@+id/iv_avatar"                           
        	   android:layout_width="1dp"        	   
        	   android:id="@+id/line3"
        	   android:layout_gravity="center_horizontal"   
        	   android:layout_marginTop="20dp" 
        	   android:layout_marginLeft="5dp"        	       
        	   />
	 
	      <View              
               android:layout_height="fill_parent" 
               android:background="@color/brown3"                            
        	   android:layout_width="1dp"
        	   android:layout_marginTop="20dp" 
        	   android:layout_toRightOf="@+id/line3"
        	   android:id="@+id/line4"      
        	   android:layout_gravity="center_horizontal"  	    
        	   />
	  
	       <LinearLayout 
           android:layout_toRightOf="@+id/line4"
           android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
           android:layout_marginTop="20dp" 
           android:layout_marginLeft="5dp"               
          android:id="@+id/ly5">
        <TextView 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/green"
             android:textSize="14sp"
             android:text="@string/lo1"
            />
        </LinearLayout>
        
	     <LinearLayout   
	     android:layout_toRightOf="@+id/line4"       
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"         
         android:layout_below="@+id/ly5"
          android:layout_marginLeft="5dp" 
        android:id="@+id/ly8">
        <TextView 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/green"
             android:textSize="14sp"
             android:text="@string/lo2"
            />
        </LinearLayout>
        
	   
      </RelativeLayout>
       <View              
               android:layout_height="1dp" 
               android:background="@color/brown2"                            
        	   android:layout_width="fill_parent"
        	   android:id="@+id/line1"    
        	   android:layout_below="@+id/horzi" 
        	   android:layout_marginTop="17dp"   	    
        	   />
      <View 
               android:layout_below="@+id/line1"
               android:layout_height="1dp" 
               android:background="@color/brown1"                            
        	   android:layout_width="fill_parent"
        	   android:id="@+id/line2"   
        	   	    
        	   />
      
          
          
      <TextView
			   android:layout_width="240dp"
			   android:layout_height="35dp"				     
			   android:layout_marginLeft="50dp"		   
			 android:layout_marginTop="20dp" 
			 android:layout_below="@+id/line2"       
			 android:text="@string/swipe1"
			 android:textColor="@color/black"
			 android:textSize="28sp"
			 android:id="@+id/in"
		  	   >
         </TextView>  
         
         <Button
			    android:id="@+id/enter"	 
			    android:layout_toRightOf="@+id/in"
			    android:layout_marginTop="20dp"	 
			  
           		android:layout_below="@+id/line2"
			    android:layout_width="60dp"
			    android:layout_height="35dp"			   
			    android:text="@string/swipe"
			     android:textColor="@color/green2"
			     android:background="@color/white"
			    android:textSize="28sp" />
         
         <TextView
			   android:layout_below="@+id/line2"
			   android:layout_toRightOf="@+id/enter"
			   android:layout_width="70dp"
			   android:layout_height="35dp"				   
			   android:layout_marginTop="20dp"	   
			 android:text="@string/swipe2"
			 android:textColor="@color/black"
			 android:textSize="28sp"
			 android:id="@+id/pre"
		  	   >
         </TextView>
         
         
             <TextView
			   android:layout_below="@+id/in"
			  
			  android:layout_marginLeft="50dp"		
			   android:layout_width="135dp"
			   android:layout_height="35dp"				   
			   android:layout_marginTop="5dp"	   
			 android:text="@string/swipe3"
			 android:textColor="@color/black"
			 android:textSize="28sp"
			 android:id="@+id/pree"
		  	   >
         </TextView>
   <Button
			    android:id="@+id/cancel"	 
			    android:layout_marginTop="5dp"	 
			    android:layout_toRightOf="@+id/pree"
			    
           		android:layout_below="@+id/in"
			    android:layout_width="30dp"
			    android:layout_height="35dp"			   
			    android:text="@string/swipe5"
			     android:textColor="@color/green2"
			     android:background="@color/white"
			    android:textSize="28sp" />
   
     <TextView
         android:layout_toRightOf="@+id/cancel" 
			   android:layout_below="@+id/in"			 
			   android:layout_width="200dp"
			   android:layout_height="35dp"				   
			   android:layout_marginTop="5dp"	   
			 android:text="@string/swipe4"
			 android:textColor="@color/black"
			 android:textSize="28sp"
			 android:id="@+id/prees"
		  	   >
         </TextView>
         
        <TextView
        
			   android:layout_below="@+id/prees"			 
			   android:layout_width="120dp"
			   android:layout_height="35dp"		
			    android:layout_marginLeft="50dp"			   
			   android:layout_marginTop="5dp"	   
			 android:text="@string/swipe6"
			 android:textColor="@color/black"
			 android:textSize="28sp"
			 android:id="@+id/preess"
		  	   >
         </TextView>
         
    	<TextView
			   android:layout_width="fill_parent"
			   android:layout_height="35dp"			   
			 android:background="@drawable/bar3" 
			 android:layout_alignParentBottom="true"		 
			   >
         </TextView>       

</RelativeLayout>
