<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/horzi"
        android:layout_width="fill_parent"
        android:layout_height="60dip">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/taiji" />

        <View
            android:layout_height="fill_parent"
            android:background="@color/brown4"
            android:layout_toRightOf="@+id/iv_avatar"
            android:layout_width="1dp"
            android:id="@+id/line3"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp" />

        <View
            android:layout_height="fill_parent"
            android:background="@color/brown3"
            android:layout_width="1dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/line3"
            android:id="@+id/line4"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/line4"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:text="@string/lo1" />
    </RelativeLayout>

    <View
        android:layout_height="1dp"
        android:background="@color/brown2"
        android:layout_width="fill_parent"
        android:id="@+id/line1"
        android:layout_below="@+id/horzi"
        android:layout_marginTop="17dp" />

    <View
        android:layout_below="@+id/line1"
        android:layout_height="1dp"
        android:background="@color/brown1"
        android:layout_width="fill_parent"
        android:id="@+id/line2"

        />

    <LinearLayout
        android:layout_below="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="85dp"
        android:id="@+id/ly3">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeword"
            android:textColor="@color/blue"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>


    <Button
        android:id="@+id/passwordkai"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="100dp"
        android:paddingRight="90dp"
        android:layout_below="@+id/ly3"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:text="@string/passwordkai"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textSize="24sp" />

    <Button
        android:layout_below="@+id/passwordkai"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="100dp"
        android:id="@+id/barcardkai"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:paddingRight="90dp"
        android:text="@string/barcardkai"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textSize="24sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/telnum"
        android:textColor="@color/blue1"
        android:layout_below="@+id/barcardkai"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="220dp"
        android:textSize="17sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@drawable/bar3"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
