<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/horzi"
        android:layout_width="fill_parent"
        android:layout_height="60dip">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/taiji" />

        <View
            android:layout_height="fill_parent"
            android:background="@color/brown4"
            android:layout_toRightOf="@+id/iv_avatar"
            android:layout_width="1dp"
            android:id="@+id/line3"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp" />

        <View
            android:layout_height="fill_parent"
            android:background="@color/brown3"
            android:layout_width="1dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/line3"
            android:id="@+id/line4"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/line4"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:text="@string/lo1" />
    </RelativeLayout>

    <View
        android:layout_height="1dp"
        android:background="@color/brown2"
        android:layout_width="fill_parent"
        android:id="@+id/line1"
        android:layout_below="@+id/horzi"
        android:layout_marginTop="17dp" />

    <View
        android:layout_below="@+id/line1"
        android:layout_height="1dp"
        android:background="@color/brown1"
        android:layout_width="fill_parent"
        android:id="@+id/line2"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/line2"
        android:text="@string/smssending"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:id="@+id/prompt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/prompt"
        android:textColor="@color/green1"
        android:textSize="50sp"
        android:textStyle="bold"
        android:text="@string/phonenumber"
        android:id="@+id/pn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/pn"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:text="@string/thanks"
        android:id="@+id/thanks" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@drawable/bar3"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
